<resources>

    <string name="app_name">Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_find">Find Device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Remote Bluetooth</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome to this app!</string>
    <string name="useIt">How to use it</string>
    <string name="getStarted">Click here to get started!</string>
    <string name="select_controller">Select a controller to get started!</string>
    <string name="classic_controller">Classic Controller</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="B">B</string>
    <string name="A">A</string>

</resources>