<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/buttonup"
        android:layout_width="102dp"
        android:layout_height="75dp"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="1"
        android:background="@android:color/transparent"
        android:contentDescription="Up"
        android:onClick="ButtPress"
        android:src="@drawable/up_button"
        android:text="@string/Up" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="98dp"
        android:layout_height="224dp"
        android:layout_column="5"
        android:layout_gravity="left"
        android:layout_row="1"
        android:background="#E80000"
        android:layout_rowSpan="4"
        android:onClick="ButtPress"
        android:text="@string/B"
        android:textSize="62dp" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="98dp"
        android:background="#33FF00"
        android:layout_height="224dp"
        android:layout_column="6"
        android:layout_gravity="left"
        android:layout_row="1"
        android:layout_rowSpan="4"
        android:onClick="ButtPress"
        android:text="@string/A"
        android:textSize="62dp" />

    <ImageButton
        android:id="@+id/buttonleft"
        android:layout_width="102dp"
        android:layout_height="75dp"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_row="2"
        android:background="@android:color/transparent"
        android:contentDescription="Left"
        android:onClick="ButtPress"
        android:src="@drawable/left_button"
        android:text="@string/Left" />

    <ImageButton
        android:id="@+id/buttonright"
        android:layout_width="102dp"
        android:layout_height="75dp"
        android:layout_column="3"
        android:layout_gravity="left|bottom"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:background="@android:color/transparent"
        android:contentDescription="Right"
        android:onClick="ButtPress"
        android:src="@drawable/right_button"
        android:text="@string/Right" />

    <ImageButton
        android:id="@+id/buttondown"
        android:layout_width="102dp"
        android:layout_height="75dp"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="4"
        android:background="@android:color/transparent"
        android:contentDescription="Down"
        android:onClick="ButtPress"
        android:src="@drawable/down_button"
        android:text="@string/Down" />
    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="28dp"
        android:layout_column="0"
        android:layout_row="2" />

    <Space
        android:layout_width="1dp"
        android:layout_height="54dp"
        android:layout_column="0"
        android:layout_row="5" />

    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="73dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="0" />

    <Space
        android:layout_width="10dp"
        android:layout_height="1dp"
        android:layout_column="3"
        android:layout_row="0" />

    <Space
        android:layout_width="23dp"
        android:layout_height="1dp"
        android:layout_column="4"
        android:layout_row="0" />

    <Space
        android:layout_width="108dp"
        android:layout_height="1dp"
        android:layout_column="5"
        android:layout_row="0" />

    <Space
        android:layout_width="30dp"
        android:layout_height="1dp"
        android:layout_column="6"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_row="3" />

    <Space
        android:layout_width="1dp"
        android:layout_height="18dp"
        android:layout_column="0"
        android:layout_row="4" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_column="0"
        android:layout_row="1" />

</GridLayout>